bug fix: YT disappears when transcripted. CSS: spacing for transcripts.
git-svn-id: https://plugins.svn.wordpress.org/accessible-video-library/trunk@832440 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/avl-mediaelement.css
+++ b/css/avl-mediaelement.css
@@ -2,4 +2,6 @@
 .mejs-controls { bottom: -30px !important; }
 .mejs-captions-position-hover { bottom: 15px !important; }
 .mejs-captions-layer { font-size: 14px !important; }
-.video-transcript-link { margin-top: 30px; display: inline-block; }
+.mejs-controls .mejs-captions-button .mejs-captions-selector ul li label { font-size: 12px!important; padding: 2px 0 0 0!important; }
+.mejs-controls .mejs-captions-button .mejs-captions-selector ul li label:hover { text-decoration: underline; cursor: pointer; }
+.video-transcript-link { display: inline-block; }
